# Stamp

./: . roadhogrc  .gitignore  babel.config.js  package.json  sts.sol  test.js
contract/: Cargo.toml  build.js  build.sh
contract/res/: stamp.wasm
contract/src/: lib.rs
neardev/: dev-account  dev-account.env
src/: App.css  App.js  config.js  index.html  index.js
